add strip call to target of all makefiles

--- a/compiler/makefile
+++ b/compiler/makefile
@@ -1,13 +1,6 @@
-BASE_COMPILATION_FLAGS=-std=c++2a -fno-rtti -fno-exceptions \
-	`llvm-config-11 --system-libs --libs core`
-
-# reverse for release
-ifeq ($(RELEASE), 1)
-	COMPILER_FLAGS=$(BASE_COMPILATION_FLAGS) -w -O3
-else
-	COMPILER_FLAGS=$(BASE_COMPILATION_FLAGS) -I/usr/include/llvm-11 -I/usr/include/llvm-c-11 \
-		-Wall -Wextra -Wpedantic -Wimplicit-fallthrough -g -Og -v
-endif
+BASE_COMPILATION_FLAGS= \
+	-std=c++2a -I/usr/include/llvm-11 -I/usr/include/llvm-c-11 \
+	`llvm-config-11 --system-libs --libs core` -fno-rtti -fno-exceptions
 
 LINKER_FLAGS=$(COMPILER_FLAGS)
 CXX = clang++-11
@@ -21,13 +14,22 @@ LLVM_LIBRARY = /usr/bin/llvm-lib-11
 
 HEADERS = $(shell find source/ -name "*.hpp")
 
+# debug and release (default) configurations
+ifeq ($(DEBUG), 1)
+	COMPILER_FLAGS= $(BASE_COMPILATION_FLAGS) -Wall -Wextra -Wpedantic -Wimplicit-fallthrough -g -Og -v
+else
+	COMPILER_FLAGS=$(BASE_COMPILATION_FLAGS) -w -O3
+endif
+
+
 # implementation
 ifeq ($(PREFIX),)
 	PREFIX := /usr/local
 endif
 
 $(TARGET): $(OBJECT_FILE) $(LLVM_LIBRARY)
-	$(CXX) $(OBJECT_FILE) -o $@ $(LINKER_FLAGS)
+	$(CXX) $(OBJECT_FILE) -o $@ $(LINKER_FLAGS) && \
+	strip -s $@
 
 $(OBJECT_FILE): $(SOURCE_FILE) $(HEADERS)
 	mkdir -p $(TARGET_DIRECTORY) && \
